# switchboard-firmware

./: .gitignore  CMakeLists.txt  main.py
src/lib/: json_transformer.c  json_transformer.h
tests/: AllTests  CMakeLists.txt  config_functions.h  main.c  tests.c  tests.h
